readm me updated

--- a/css/vaahcss.css
+++ b/css/vaahcss.css
@@ -1,1560 +1,1560 @@
-.p-0 {
+.pd-0 {
   padding: 0px;
 }
 
-.pt-0 {
+.pd-t-0 {
   padding-top: 0px;
 }
 
-.pr-0 {
+.pd-r-0 {
   padding-right: 0px;
 }
 
-.pb-0 {
+.pd-b-0 {
   padding-bottom: 0px;
 }
 
-.pl-0 {
+.pd-l-0 {
   padding-left: 0px;
 }
 
-.p-1 {
+.pd-1 {
   padding: 1px;
 }
 
-.pt-1 {
+.pd-t-1 {
   padding-top: 1px;
 }
 
-.pr-1 {
+.pd-r-1 {
   padding-right: 1px;
 }
 
-.pb-1 {
+.pd-b-1 {
   padding-bottom: 1px;
 }
 
-.pl-1 {
+.pd-l-1 {
   padding-left: 1px;
 }
 
-.p-2 {
+.pd-2 {
   padding: 2px;
 }
 
-.pt-2 {
+.pd-t-2 {
   padding-top: 2px;
 }
 
-.pr-2 {
+.pd-r-2 {
   padding-right: 2px;
 }
 
-.pb-2 {
+.pd-b-2 {
   padding-bottom: 2px;
 }
 
-.pl-2 {
+.pd-l-2 {
   padding-left: 2px;
 }
 
-.p-3 {
+.pd-3 {
   padding: 3px;
 }
 
-.pt-3 {
+.pd-t-3 {
   padding-top: 3px;
 }
 
-.pr-3 {
+.pd-r-3 {
   padding-right: 3px;
 }
 
-.pb-3 {
+.pd-b-3 {
   padding-bottom: 3px;
 }
 
-.pl-3 {
+.pd-l-3 {
   padding-left: 3px;
 }
 
-.p-4 {
+.pd-4 {
   padding: 4px;
 }
 
-.pt-4 {
+.pd-t-4 {
   padding-top: 4px;
 }
 
-.pr-4 {
+.pd-r-4 {
   padding-right: 4px;
 }
 
-.pb-4 {
+.pd-b-4 {
   padding-bottom: 4px;
 }
 
-.pl-4 {
+.pd-l-4 {
   padding-left: 4px;
 }
 
-.p-5 {
+.pd-5 {
   padding: 5px;
 }
 
-.pt-5 {
+.pd-t-5 {
   padding-top: 5px;
 }
 
-.pr-5 {
+.pd-r-5 {
   padding-right: 5px;
 }
 
-.pb-5 {
+.pd-b-5 {
   padding-bottom: 5px;
 }
 
-.pl-5 {
+.pd-l-5 {
   padding-left: 5px;
 }
 
-.p-6 {
+.pd-6 {
   padding: 6px;
 }
 
-.pt-6 {
+.pd-t-6 {
   padding-top: 6px;
 }
 
-.pr-6 {
+.pd-r-6 {
   padding-right: 6px;
 }
 
-.pb-6 {
+.pd-b-6 {
   padding-bottom: 6px;
 }
 
-.pl-6 {
+.pd-l-6 {
   padding-left: 6px;
 }
 
-.p-7 {
+.pd-7 {
   padding: 7px;
 }
 
-.pt-7 {
+.pd-t-7 {
   padding-top: 7px;
 }
 
-.pr-7 {
+.pd-r-7 {
   padding-right: 7px;
 }
 
-.pb-7 {
+.pd-b-7 {
   padding-bottom: 7px;
 }
 
-.pl-7 {
+.pd-l-7 {
   padding-left: 7px;
 }
 
-.p-8 {
+.pd-8 {
   padding: 8px;
 }
 
-.pt-8 {
+.pd-t-8 {
   padding-top: 8px;
 }
 
-.pr-8 {
+.pd-r-8 {
   padding-right: 8px;
 }
 
-.pb-8 {
+.pd-b-8 {
   padding-bottom: 8px;
 }
 
-.pl-8 {
+.pd-l-8 {
   padding-left: 8px;
 }
 
-.p-9 {
+.pd-9 {
   padding: 9px;
 }
 
-.pt-9 {
+.pd-t-9 {
   padding-top: 9px;
 }
 
-.pr-9 {
+.pd-r-9 {
   padding-right: 9px;
 }
 
-.pb-9 {
+.pd-b-9 {
   padding-bottom: 9px;
 }
 
-.pl-9 {
+.pd-l-9 {
   padding-left: 9px;
 }
 
-.p-10 {
+.pd-10 {
   padding: 10px;
 }
 
-.pt-10 {
+.pd-t-10 {
   padding-top: 10px;
 }
 
-.pr-10 {
+.pd-r-10 {
   padding-right: 10px;
 }
 
-.pb-10 {
+.pd-b-10 {
   padding-bottom: 10px;
 }
 
-.pl-10 {
+.pd-l-10 {
   padding-left: 10px;
 }
 
-.p-10 {
+.pd-10 {
   padding: 10px;
 }
 
-.pt-10 {
+.pd-t-10 {
   padding-top: 10px;
 }
 
-.pr-10 {
+.pd-r-10 {
   padding-right: 10px;
 }
 
-.pb-10 {
+.pd-b-10 {
   padding-bottom: 10px;
 }
 
-.pl-10 {
+.pd-l-10 {
   padding-left: 10px;
 }
 
-.p-15 {
+.pd-15 {
   padding: 15px;
 }
 
-.pt-15 {
+.pd-t-15 {
   padding-top: 15px;
 }
 
-.pr-15 {
+.pd-r-15 {
   padding-right: 15px;
 }
 
-.pb-15 {
+.pd-b-15 {
   padding-bottom: 15px;
 }
 
-.pl-15 {
+.pd-l-15 {
   padding-left: 15px;
 }
 
-.p-20 {
+.pd-20 {
   padding: 20px;
 }
 
-.pt-20 {
+.pd-t-20 {
   padding-top: 20px;
 }
 
-.pr-20 {
+.pd-r-20 {
   padding-right: 20px;
 }
 
-.pb-20 {
+.pd-b-20 {
   padding-bottom: 20px;
 }
 
-.pl-20 {
+.pd-l-20 {
   padding-left: 20px;
 }
 
-.p-25 {
+.pd-25 {
   padding: 25px;
 }
 
-.pt-25 {
+.pd-t-25 {
   padding-top: 25px;
 }
 
-.pr-25 {
+.pd-r-25 {
   padding-right: 25px;
 }
 
-.pb-25 {
+.pd-b-25 {
   padding-bottom: 25px;
 }
 
-.pl-25 {
+.pd-l-25 {
   padding-left: 25px;
 }
 
-.p-30 {
+.pd-30 {
   padding: 30px;
 }
 
-.pt-30 {
+.pd-t-30 {
   padding-top: 30px;
 }
 
-.pr-30 {
+.pd-r-30 {
   padding-right: 30px;
 }
 
-.pb-30 {
+.pd-b-30 {
   padding-bottom: 30px;
 }
 
-.pl-30 {
+.pd-l-30 {
   padding-left: 30px;
 }
 
-.p-35 {
+.pd-35 {
   padding: 35px;
 }
 
-.pt-35 {
+.pd-t-35 {
   padding-top: 35px;
 }
 
-.pr-35 {
+.pd-r-35 {
   padding-right: 35px;
 }
 
-.pb-35 {
+.pd-b-35 {
   padding-bottom: 35px;
 }
 
-.pl-35 {
+.pd-l-35 {
   padding-left: 35px;
 }
 
-.p-40 {
+.pd-40 {
   padding: 40px;
 }
 
-.pt-40 {
+.pd-t-40 {
   padding-top: 40px;
 }
 
-.pr-40 {
+.pd-r-40 {
   padding-right: 40px;
 }
 
-.pb-40 {
+.pd-b-40 {
   padding-bottom: 40px;
 }
 
-.pl-40 {
+.pd-l-40 {
   padding-left: 40px;
 }
 
-.p-45 {
+.pd-45 {
   padding: 45px;
 }
 
-.pt-45 {
+.pd-t-45 {
   padding-top: 45px;
 }
 
-.pr-45 {
+.pd-r-45 {
   padding-right: 45px;
 }
 
-.pb-45 {
+.pd-b-45 {
   padding-bottom: 45px;
 }
 
-.pl-45 {
+.pd-l-45 {
   padding-left: 45px;
 }
 
-.p-50 {
+.pd-50 {
   padding: 50px;
 }
 
-.pt-50 {
+.pd-t-50 {
   padding-top: 50px;
 }
 
-.pr-50 {
+.pd-r-50 {
   padding-right: 50px;
 }
 
-.pb-50 {
+.pd-b-50 {
   padding-bottom: 50px;
 }
 
-.pl-50 {
+.pd-l-50 {
   padding-left: 50px;
 }
 
-.p-55 {
+.pd-55 {
   padding: 55px;
 }
 
-.pt-55 {
+.pd-t-55 {
   padding-top: 55px;
 }
 
-.pr-55 {
+.pd-r-55 {
   padding-right: 55px;
 }
 
-.pb-55 {
+.pd-b-55 {
   padding-bottom: 55px;
 }
 
-.pl-55 {
+.pd-l-55 {
   padding-left: 55px;
 }
 
-.p-60 {
+.pd-60 {
   padding: 60px;
 }
 
-.pt-60 {
+.pd-t-60 {
   padding-top: 60px;
 }
 
-.pr-60 {
+.pd-r-60 {
   padding-right: 60px;
 }
 
-.pb-60 {
+.pd-b-60 {
   padding-bottom: 60px;
 }
 
-.pl-60 {
+.pd-l-60 {
   padding-left: 60px;
 }
 
-.p-65 {
+.pd-65 {
   padding: 65px;
 }
 
-.pt-65 {
+.pd-t-65 {
   padding-top: 65px;
 }
 
-.pr-65 {
+.pd-r-65 {
   padding-right: 65px;
 }
 
-.pb-65 {
+.pd-b-65 {
   padding-bottom: 65px;
 }
 
-.pl-65 {
+.pd-l-65 {
   padding-left: 65px;
 }
 
-.p-70 {
+.pd-70 {
   padding: 70px;
 }
 
-.pt-70 {
+.pd-t-70 {
   padding-top: 70px;
 }
 
-.pr-70 {
+.pd-r-70 {
   padding-right: 70px;
 }
 
-.pb-70 {
+.pd-b-70 {
   padding-bottom: 70px;
 }
 
-.pl-70 {
+.pd-l-70 {
   padding-left: 70px;
 }
 
-.p-75 {
+.pd-75 {
   padding: 75px;
 }
 
-.pt-75 {
+.pd-t-75 {
   padding-top: 75px;
 }
 
-.pr-75 {
+.pd-r-75 {
   padding-right: 75px;
 }
 
-.pb-75 {
+.pd-b-75 {
   padding-bottom: 75px;
 }
 
-.pl-75 {
+.pd-l-75 {
   padding-left: 75px;
 }
 
-.p-80 {
+.pd-80 {
   padding: 80px;
 }
 
-.pt-80 {
+.pd-t-80 {
   padding-top: 80px;
 }
 
-.pr-80 {
+.pd-r-80 {
   padding-right: 80px;
 }
 
-.pb-80 {
+.pd-b-80 {
   padding-bottom: 80px;
 }
 
-.pl-80 {
+.pd-l-80 {
   padding-left: 80px;
 }
 
-.p-85 {
+.pd-85 {
   padding: 85px;
 }
 
-.pt-85 {
+.pd-t-85 {
   padding-top: 85px;
 }
 
-.pr-85 {
+.pd-r-85 {
   padding-right: 85px;
 }
 
-.pb-85 {
+.pd-b-85 {
   padding-bottom: 85px;
 }
 
-.pl-85 {
+.pd-l-85 {
   padding-left: 85px;
 }
 
-.p-90 {
+.pd-90 {
   padding: 90px;
 }
 
-.pt-90 {
+.pd-t-90 {
   padding-top: 90px;
 }
 
-.pr-90 {
+.pd-r-90 {
   padding-right: 90px;
 }
 
-.pb-90 {
+.pd-b-90 {
   padding-bottom: 90px;
 }
 
-.pl-90 {
+.pd-l-90 {
   padding-left: 90px;
 }
 
-.p-95 {
+.pd-95 {
   padding: 95px;
 }
 
-.pt-95 {
+.pd-t-95 {
   padding-top: 95px;
 }
 
-.pr-95 {
+.pd-r-95 {
   padding-right: 95px;
 }
 
-.pb-95 {
+.pd-b-95 {
   padding-bottom: 95px;
 }
 
-.pl-95 {
+.pd-l-95 {
   padding-left: 95px;
 }
 
-.p-100 {
+.pd-100 {
   padding: 100px;
 }
 
-.pt-100 {
+.pd-t-100 {
   padding-top: 100px;
 }
 
-.pr-100 {
+.pd-r-100 {
   padding-right: 100px;
 }
 
-.pb-100 {
+.pd-b-100 {
   padding-bottom: 100px;
 }
 
-.pl-100 {
+.pd-l-100 {
   padding-left: 100px;
 }
 
-.p-100 {
+.pd-100 {
   padding: 100px;
 }
 
-.pt-100 {
+.pd-t-100 {
   padding-top: 100px;
 }
 
-.pr-100 {
+.pd-r-100 {
   padding-right: 100px;
 }
 
-.pb-100 {
+.pd-b-100 {
   padding-bottom: 100px;
 }
 
-.pl-100 {
+.pd-l-100 {
   padding-left: 100px;
 }
 
-.p-150 {
+.pd-150 {
   padding: 150px;
 }
 
-.pt-150 {
+.pd-t-150 {
   padding-top: 150px;
 }
 
-.pr-150 {
+.pd-r-150 {
   padding-right: 150px;
 }
 
-.pb-150 {
+.pd-b-150 {
   padding-bottom: 150px;
 }
 
-.pl-150 {
+.pd-l-150 {
   padding-left: 150px;
 }
 
-.p-200 {
+.pd-200 {
   padding: 200px;
 }
 
-.pt-200 {
+.pd-t-200 {
   padding-top: 200px;
 }
 
-.pr-200 {
+.pd-r-200 {
   padding-right: 200px;
 }
 
-.pb-200 {
+.pd-b-200 {
   padding-bottom: 200px;
 }
 
-.pl-200 {
+.pd-l-200 {
   padding-left: 200px;
 }
 
-.p-250 {
+.pd-250 {
   padding: 250px;
 }
 
-.pt-250 {
+.pd-t-250 {
   padding-top: 250px;
 }
 
-.pr-250 {
+.pd-r-250 {
   padding-right: 250px;
 }
 
-.pb-250 {
+.pd-b-250 {
   padding-bottom: 250px;
 }
 
-.pl-250 {
+.pd-l-250 {
   padding-left: 250px;
 }
 
-.p-300 {
+.pd-300 {
   padding: 300px;
 }
 
-.pt-300 {
+.pd-t-300 {
   padding-top: 300px;
 }
 
-.pr-300 {
+.pd-r-300 {
   padding-right: 300px;
 }
 
-.pb-300 {
+.pd-b-300 {
   padding-bottom: 300px;
 }
 
-.pl-300 {
+.pd-l-300 {
   padding-left: 300px;
 }
 
-.p-350 {
+.pd-350 {
   padding: 350px;
 }
 
-.pt-350 {
+.pd-t-350 {
   padding-top: 350px;
 }
 
-.pr-350 {
+.pd-r-350 {
   padding-right: 350px;
 }
 
-.pb-350 {
+.pd-b-350 {
   padding-bottom: 350px;
 }
 
-.pl-350 {
+.pd-l-350 {
   padding-left: 350px;
 }
 
-.p-400 {
+.pd-400 {
   padding: 400px;
 }
 
-.pt-400 {
+.pd-t-400 {
   padding-top: 400px;
 }
 
-.pr-400 {
+.pd-r-400 {
   padding-right: 400px;
 }
 
-.pb-400 {
+.pd-b-400 {
   padding-bottom: 400px;
 }
 
-.pl-400 {
+.pd-l-400 {
   padding-left: 400px;
 }
 
-.p-450 {
+.pd-450 {
   padding: 450px;
 }
 
-.pt-450 {
+.pd-t-450 {
   padding-top: 450px;
 }
 
-.pr-450 {
+.pd-r-450 {
   padding-right: 450px;
 }
 
-.pb-450 {
+.pd-b-450 {
   padding-bottom: 450px;
 }
 
-.pl-450 {
+.pd-l-450 {
   padding-left: 450px;
 }
 
-.p-500 {
+.pd-500 {
   padding: 500px;
 }
 
-.pt-500 {
+.pd-t-500 {
   padding-top: 500px;
 }
 
-.pr-500 {
+.pd-r-500 {
   padding-right: 500px;
 }
 
-.pb-500 {
+.pd-b-500 {
   padding-bottom: 500px;
 }
 
-.pl-500 {
+.pd-l-500 {
   padding-left: 500px;
 }
 
-.m-0 {
+.mr-0 {
   margin: 0px;
 }
 
-.mt-0 {
+.mr-t-0 {
   margin-top: 0px;
 }
 
-.mr-0 {
+.mr-r-0 {
   margin-right: 0px;
 }
 
-.mb-0 {
+.mr-b-0 {
   margin-bottom: 0px;
 }
 
-.ml-0 {
+.mr-l-0 {
   margin-left: 0px;
 }
 
-.m-1 {
+.mr-1 {
   margin: 1px;
 }
 
-.mt-1 {
+.mr-t-1 {
   margin-top: 1px;
 }
 
-.mr-1 {
+.mr-r-1 {
   margin-right: 1px;
 }
 
-.mb-1 {
+.mr-b-1 {
   margin-bottom: 1px;
 }
 
-.ml-1 {
+.mr-l-1 {
   margin-left: 1px;
 }
 
-.m-2 {
+.mr-2 {
   margin: 2px;
 }
 
-.mt-2 {
+.mr-t-2 {
   margin-top: 2px;
 }
 
-.mr-2 {
+.mr-r-2 {
   margin-right: 2px;
 }
 
-.mb-2 {
+.mr-b-2 {
   margin-bottom: 2px;
 }
 
-.ml-2 {
+.mr-l-2 {
   margin-left: 2px;
 }
 
-.m-3 {
+.mr-3 {
   margin: 3px;
 }
 
-.mt-3 {
+.mr-t-3 {
   margin-top: 3px;
 }
 
-.mr-3 {
+.mr-r-3 {
   margin-right: 3px;
 }
 
-.mb-3 {
+.mr-b-3 {
   margin-bottom: 3px;
 }
 
-.ml-3 {
+.mr-l-3 {
   margin-left: 3px;
 }
 
-.m-4 {
+.mr-4 {
   margin: 4px;
 }
 
-.mt-4 {
+.mr-t-4 {
   margin-top: 4px;
 }
 
-.mr-4 {
+.mr-r-4 {
   margin-right: 4px;
 }
 
-.mb-4 {
+.mr-b-4 {
   margin-bottom: 4px;
 }
 
-.ml-4 {
+.mr-l-4 {
   margin-left: 4px;
 }
 
-.m-5 {
+.mr-5 {
   margin: 5px;
 }
 
-.mt-5 {
+.mr-t-5 {
   margin-top: 5px;
 }
 
-.mr-5 {
+.mr-r-5 {
   margin-right: 5px;
 }
 
-.mb-5 {
+.mr-b-5 {
   margin-bottom: 5px;
 }
 
-.ml-5 {
+.mr-l-5 {
   margin-left: 5px;
 }
 
-.m-6 {
+.mr-6 {
   margin: 6px;
 }
 
-.mt-6 {
+.mr-t-6 {
   margin-top: 6px;
 }
 
-.mr-6 {
+.mr-r-6 {
   margin-right: 6px;
 }
 
-.mb-6 {
+.mr-b-6 {
   margin-bottom: 6px;
 }
 
-.ml-6 {
+.mr-l-6 {
   margin-left: 6px;
 }
 
-.m-7 {
+.mr-7 {
   margin: 7px;
 }
 
-.mt-7 {
+.mr-t-7 {
   margin-top: 7px;
 }
 
-.mr-7 {
+.mr-r-7 {
   margin-right: 7px;
 }
 
-.mb-7 {
+.mr-b-7 {
   margin-bottom: 7px;
 }
 
-.ml-7 {
+.mr-l-7 {
   margin-left: 7px;
 }
 
-.m-8 {
+.mr-8 {
   margin: 8px;
 }
 
-.mt-8 {
+.mr-t-8 {
   margin-top: 8px;
 }
 
-.mr-8 {
+.mr-r-8 {
   margin-right: 8px;
 }
 
-.mb-8 {
+.mr-b-8 {
   margin-bottom: 8px;
 }
 
-.ml-8 {
+.mr-l-8 {
   margin-left: 8px;
 }
 
-.m-9 {
+.mr-9 {
   margin: 9px;
 }
 
-.mt-9 {
+.mr-t-9 {
   margin-top: 9px;
 }
 
-.mr-9 {
+.mr-r-9 {
   margin-right: 9px;
 }
 
-.mb-9 {
+.mr-b-9 {
   margin-bottom: 9px;
 }
 
-.ml-9 {
+.mr-l-9 {
   margin-left: 9px;
 }
 
-.m-10 {
+.mr-10 {
   margin: 10px;
 }
 
-.mt-10 {
+.mr-t-10 {
   margin-top: 10px;
 }
 
-.mr-10 {
+.mr-r-10 {
   margin-right: 10px;
 }
 
-.mb-10 {
+.mr-b-10 {
   margin-bottom: 10px;
 }
 
-.ml-10 {
+.mr-l-10 {
   margin-left: 10px;
 }
 
-.m-10 {
+.mr-10 {
   margin: 10px;
 }
 
-.mt-10 {
+.mr-t-10 {
   margin-top: 10px;
 }
 
-.mr-10 {
+.mr-r-10 {
   margin-right: 10px;
 }
 
-.mb-10 {
+.mr-b-10 {
   margin-bottom: 10px;
 }
 
-.ml-10 {
+.mr-l-10 {
   margin-left: 10px;
-}
-
-.m-15 {
-  margin: 15px;
-}
-
-.mt-15 {
-  margin-top: 15px;
 }
 
 .mr-15 {
+  margin: 15px;
+}
+
+.mr-t-15 {
+  margin-top: 15px;
+}
+
+.mr-r-15 {
   margin-right: 15px;
 }
 
-.mb-15 {
+.mr-b-15 {
   margin-bottom: 15px;
 }
 
-.ml-15 {
+.mr-l-15 {
   margin-left: 15px;
 }
 
-.m-20 {
+.mr-20 {
   margin: 20px;
 }
 
-.mt-20 {
+.mr-t-20 {
   margin-top: 20px;
 }
 
-.mr-20 {
+.mr-r-20 {
   margin-right: 20px;
 }
 
-.mb-20 {
+.mr-b-20 {
   margin-bottom: 20px;
 }
 
-.ml-20 {
+.mr-l-20 {
   margin-left: 20px;
 }
 
-.m-25 {
+.mr-25 {
   margin: 25px;
 }
 
-.mt-25 {
+.mr-t-25 {
   margin-top: 25px;
 }
 
-.mr-25 {
+.mr-r-25 {
   margin-right: 25px;
 }
 
-.mb-25 {
+.mr-b-25 {
   margin-bottom: 25px;
 }
 
-.ml-25 {
+.mr-l-25 {
   margin-left: 25px;
 }
 
-.m-30 {
+.mr-30 {
   margin: 30px;
 }
 
-.mt-30 {
+.mr-t-30 {
   margin-top: 30px;
 }
 
-.mr-30 {
+.mr-r-30 {
   margin-right: 30px;
 }
 
-.mb-30 {
+.mr-b-30 {
   margin-bottom: 30px;
 }
 
-.ml-30 {
+.mr-l-30 {
   margin-left: 30px;
 }
 
-.m-35 {
+.mr-35 {
   margin: 35px;
 }
 
-.mt-35 {
+.mr-t-35 {
   margin-top: 35px;
 }
 
-.mr-35 {
+.mr-r-35 {
   margin-right: 35px;
 }
 
-.mb-35 {
+.mr-b-35 {
   margin-bottom: 35px;
 }
 
-.ml-35 {
+.mr-l-35 {
   margin-left: 35px;
 }
 
-.m-40 {
+.mr-40 {
   margin: 40px;
 }
 
-.mt-40 {
+.mr-t-40 {
   margin-top: 40px;
 }
 
-.mr-40 {
+.mr-r-40 {
   margin-right: 40px;
 }
 
-.mb-40 {
+.mr-b-40 {
   margin-bottom: 40px;
 }
 
-.ml-40 {
+.mr-l-40 {
   margin-left: 40px;
 }
 
-.m-45 {
+.mr-45 {
   margin: 45px;
 }
 
-.mt-45 {
+.mr-t-45 {
   margin-top: 45px;
 }
 
-.mr-45 {
+.mr-r-45 {
   margin-right: 45px;
 }
 
-.mb-45 {
+.mr-b-45 {
   margin-bottom: 45px;
 }
 
-.ml-45 {
+.mr-l-45 {
   margin-left: 45px;
 }
 
-.m-50 {
+.mr-50 {
   margin: 50px;
 }
 
-.mt-50 {
+.mr-t-50 {
   margin-top: 50px;
 }
 
-.mr-50 {
+.mr-r-50 {
   margin-right: 50px;
 }
 
-.mb-50 {
+.mr-b-50 {
   margin-bottom: 50px;
 }
 
-.ml-50 {
+.mr-l-50 {
   margin-left: 50px;
 }
 
-.m-55 {
+.mr-55 {
   margin: 55px;
 }
 
-.mt-55 {
+.mr-t-55 {
   margin-top: 55px;
 }
 
-.mr-55 {
+.mr-r-55 {
   margin-right: 55px;
 }
 
-.mb-55 {
+.mr-b-55 {
   margin-bottom: 55px;
 }
 
-.ml-55 {
+.mr-l-55 {
   margin-left: 55px;
 }
 
-.m-60 {
+.mr-60 {
   margin: 60px;
 }
 
-.mt-60 {
+.mr-t-60 {
   margin-top: 60px;
 }
 
-.mr-60 {
+.mr-r-60 {
   margin-right: 60px;
 }
 
-.mb-60 {
+.mr-b-60 {
   margin-bottom: 60px;
 }
 
-.ml-60 {
+.mr-l-60 {
   margin-left: 60px;
 }
 
-.m-65 {
+.mr-65 {
   margin: 65px;
 }
 
-.mt-65 {
+.mr-t-65 {
   margin-top: 65px;
 }
 
-.mr-65 {
+.mr-r-65 {
   margin-right: 65px;
 }
 
-.mb-65 {
+.mr-b-65 {
   margin-bottom: 65px;
 }
 
-.ml-65 {
+.mr-l-65 {
   margin-left: 65px;
 }
 
-.m-70 {
+.mr-70 {
   margin: 70px;
 }
 
-.mt-70 {
+.mr-t-70 {
   margin-top: 70px;
 }
 
-.mr-70 {
+.mr-r-70 {
   margin-right: 70px;
 }
 
-.mb-70 {
+.mr-b-70 {
   margin-bottom: 70px;
 }
 
-.ml-70 {
+.mr-l-70 {
   margin-left: 70px;
 }
 
-.m-75 {
+.mr-75 {
   margin: 75px;
 }
 
-.mt-75 {
+.mr-t-75 {
   margin-top: 75px;
 }
 
-.mr-75 {
+.mr-r-75 {
   margin-right: 75px;
 }
 
-.mb-75 {
+.mr-b-75 {
   margin-bottom: 75px;
 }
 
-.ml-75 {
+.mr-l-75 {
   margin-left: 75px;
 }
 
-.m-80 {
+.mr-80 {
   margin: 80px;
 }
 
-.mt-80 {
+.mr-t-80 {
   margin-top: 80px;
 }
 
-.mr-80 {
+.mr-r-80 {
   margin-right: 80px;
 }
 
-.mb-80 {
+.mr-b-80 {
   margin-bottom: 80px;
 }
 
-.ml-80 {
+.mr-l-80 {
   margin-left: 80px;
 }
 
-.m-85 {
+.mr-85 {
   margin: 85px;
 }
 
-.mt-85 {
+.mr-t-85 {
   margin-top: 85px;
 }
 
-.mr-85 {
+.mr-r-85 {
   margin-right: 85px;
 }
 
-.mb-85 {
+.mr-b-85 {
   margin-bottom: 85px;
 }
 
-.ml-85 {
+.mr-l-85 {
   margin-left: 85px;
 }
 
-.m-90 {
+.mr-90 {
   margin: 90px;
 }
 
-.mt-90 {
+.mr-t-90 {
   margin-top: 90px;
 }
 
-.mr-90 {
+.mr-r-90 {
   margin-right: 90px;
 }
 
-.mb-90 {
+.mr-b-90 {
   margin-bottom: 90px;
 }
 
-.ml-90 {
+.mr-l-90 {
   margin-left: 90px;
 }
 
-.m-95 {
+.mr-95 {
   margin: 95px;
 }
 
-.mt-95 {
+.mr-t-95 {
   margin-top: 95px;
 }
 
-.mr-95 {
+.mr-r-95 {
   margin-right: 95px;
 }
 
-.mb-95 {
+.mr-b-95 {
   margin-bottom: 95px;
 }
 
-.ml-95 {
+.mr-l-95 {
   margin-left: 95px;
 }
 
-.m-100 {
+.mr-100 {
   margin: 100px;
 }
 
-.mt-100 {
+.mr-t-100 {
   margin-top: 100px;
 }
 
-.mr-100 {
+.mr-r-100 {
   margin-right: 100px;
 }
 
-.mb-100 {
+.mr-b-100 {
   margin-bottom: 100px;
 }
 
-.ml-100 {
+.mr-l-100 {
   margin-left: 100px;
 }
 
-.m-100 {
+.mr-100 {
   margin: 100px;
 }
 
-.mt-100 {
+.mr-t-100 {
   margin-top: 100px;
 }
 
-.mr-100 {
+.mr-r-100 {
   margin-right: 100px;
 }
 
-.mb-100 {
+.mr-b-100 {
   margin-bottom: 100px;
 }
 
-.ml-100 {
+.mr-l-100 {
   margin-left: 100px;
-}
-
-.m-150 {
-  margin: 150px;
-}
-
-.mt-150 {
-  margin-top: 150px;
 }
 
 .mr-150 {
+  margin: 150px;
+}
+
+.mr-t-150 {
+  margin-top: 150px;
+}
+
+.mr-r-150 {
   margin-right: 150px;
 }
 
-.mb-150 {
+.mr-b-150 {
   margin-bottom: 150px;
 }
 
-.ml-150 {
+.mr-l-150 {
   margin-left: 150px;
 }
 
-.m-200 {
+.mr-200 {
   margin: 200px;
 }
 
-.mt-200 {
+.mr-t-200 {
   margin-top: 200px;
 }
 
-.mr-200 {
+.mr-r-200 {
   margin-right: 200px;
 }
 
-.mb-200 {
+.mr-b-200 {
   margin-bottom: 200px;
 }
 
-.ml-200 {
+.mr-l-200 {
   margin-left: 200px;
 }
 
-.m-250 {
+.mr-250 {
   margin: 250px;
 }
 
-.mt-250 {
+.mr-t-250 {
   margin-top: 250px;
 }
 
-.mr-250 {
+.mr-r-250 {
   margin-right: 250px;
 }
 
-.mb-250 {
+.mr-b-250 {
   margin-bottom: 250px;
 }
 
-.ml-250 {
+.mr-l-250 {
   margin-left: 250px;
 }
 
-.m-300 {
+.mr-300 {
   margin: 300px;
 }
 
-.mt-300 {
+.mr-t-300 {
   margin-top: 300px;
 }
 
-.mr-300 {
+.mr-r-300 {
   margin-right: 300px;
 }
 
-.mb-300 {
+.mr-b-300 {
   margin-bottom: 300px;
 }
 
-.ml-300 {
+.mr-l-300 {
   margin-left: 300px;
 }
 
-.m-350 {
+.mr-350 {
   margin: 350px;
 }
 
-.mt-350 {
+.mr-t-350 {
   margin-top: 350px;
 }
 
-.mr-350 {
+.mr-r-350 {
   margin-right: 350px;
 }
 
-.mb-350 {
+.mr-b-350 {
   margin-bottom: 350px;
 }
 
-.ml-350 {
+.mr-l-350 {
   margin-left: 350px;
 }
 
-.m-400 {
+.mr-400 {
   margin: 400px;
 }
 
-.mt-400 {
+.mr-t-400 {
   margin-top: 400px;
 }
 
-.mr-400 {
+.mr-r-400 {
   margin-right: 400px;
 }
 
-.mb-400 {
+.mr-b-400 {
   margin-bottom: 400px;
 }
 
-.ml-400 {
+.mr-l-400 {
   margin-left: 400px;
 }
 
-.m-450 {
+.mr-450 {
   margin: 450px;
 }
 
-.mt-450 {
+.mr-t-450 {
   margin-top: 450px;
 }
 
-.mr-450 {
+.mr-r-450 {
   margin-right: 450px;
 }
 
-.mb-450 {
+.mr-b-450 {
   margin-bottom: 450px;
 }
 
-.ml-450 {
+.mr-l-450 {
   margin-left: 450px;
 }
 
-.m-500 {
+.mr-500 {
   margin: 500px;
 }
 
-.mt-500 {
+.mr-t-500 {
   margin-top: 500px;
 }
 
-.mr-500 {
+.mr-r-500 {
   margin-right: 500px;
 }
 
-.mb-500 {
+.mr-b-500 {
   margin-bottom: 500px;
 }
 
-.ml-500 {
+.mr-l-500 {
   margin-left: 500px;
 }
 
