--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -25,7 +25,7 @@ $range: ('small': $range_small, 'medium': $range_medium, 'large':$range_large);
 
 //------- spacing
 
-$spacing: ('padding': 'p', 'margin': 'm',);
+$spacing: ('padding': 'pd', 'margin': 'mr',);
 
 
 //------- direction
@@ -36,7 +36,7 @@ $directions: ("top": "t", "right": "r", "bottom": "b", "left": "l");
 
 //------- properties
 
-$properties: ('border': 'b', 'font': 'font', 'radius': 'r');
+$properties: ('border': 'br', 'font': 'font', 'radius': 'rd');
 
 
 //------- z-index
